Add Kafka, nanoid, and Collapsible dependencies; update .env.example

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,7 @@ OPENAI_API_KEY=sk-your_openai_api_key
 
 # App URL (optional, for Socket.IO CORS)
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# Kafka (Optional - Event Streaming)
+KAFKA_BROKERS=localhost:9092
+KAFKA_CLIENT_ID=js-ashanti-analytics
