--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
@@ -49,8 +50,10 @@
     "ioredis": "^5.8.2",
     "jose": "^6.0.12",
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
     "lucide-react": "^0.516.0",
     "motion": "^12.23.6",
+    "nanoid": "^5.1.6",
     "next": "15.4.8",
     "next-themes": "^0.4.6",
     "node-cron": "^4.2.1",
