--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,9 @@ REDIS_URL=redis://localhost:6379
 # OpenAI (for AI insights)
 OPENAI_API_KEY=sk-your_openai_api_key
 
+# Groq (for AI insights)
+GROQ_API_KEY=your_groq_api_key
+
 # App URL (optional, for Socket.IO CORS)
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
