--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "npx concurrently -k \"npm:dev:app\" \"npm:dev:worker\"",
+    "dev:app": "next dev",
+    "dev:worker": "tsx scripts/start-batch-processor.ts",
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
@@ -47,6 +49,7 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "fuse.js": "^7.1.0",
+    "groq-sdk": "^0.37.0",
     "ioredis": "^5.8.2",
     "jose": "^6.0.12",
     "jsonwebtoken": "^9.0.2",
@@ -95,6 +98,7 @@
     "ts-jest": "^29.4.6",
     "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "concurrently": "^8.2.2"
   }
 }
