update start script

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,11 @@
   "name": "js-ashanti-backend",
   "version": "1.0.0",
   "description": "Backend for JS Ashanti",
-  "main": "src/server.ts",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "node dist/server.js",
-    "dev": "nodemon src/server.ts",
-    "worker": "ts-node scripts/start-worker.ts",
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts",
+    "worker": "ts-node src/index.ts",
     "build": "tsc"
   },
   "keywords": [],
