--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,10 @@
   "description": "Backend for JS Ashanti",
   "main": "src/index.ts",
   "scripts": {
-    "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts",
-    "worker": "ts-node src/index.ts",
-    "build": "tsc"
+    "start": "npx prisma generate && node dist/index.js",
+    "dev": "npx prisma generate && nodemon src/index.ts",
+    "worker": "npx prisma generate && ts-node src/index.ts",
+    "build": "npx prisma generate && tsc"
   },
   "keywords": [],
   "author": "",
